# Cell

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Automata1D.cpp.7857B8B200929CF0.idx  Automata1D.h.069BF0B60EF26065.idx  Automata2D.cpp.D7D8E4A9B17EC1F1.idx  Automata2D.h.E67C715366049277.idx  Errors.cpp.9855E2CEB7D8A758.idx  Errors.h.C9752C40F9C5DF4B.idx  Random.cpp.FC042C8EC1DB9880.idx  Random.h.301E724726D3DB8D.idx  SDLAutomata.cpp.D610A7AD55200A8A.idx  SDLAutomata.h.ABF34BF51AC7B1E6.idx  aaa.h.EDEAE9E8618603FA.idx  main.cpp.099520114C92C328.idx  terminalAutomata.cpp.CEE93B4E0CB0B394.idx  terminalAutomata.h.F14AADDE9430024F.idx
Main/: CMakeLists.txt
Main/Header_Files/: Automata1D.h  Automata2D.h  Random.h  SDLAutomata.h  terminalAutomata.h
Main/Source_Files/: Automata1D.cpp  Automata2D.cpp  Errors.cpp  Random.cpp  SDLAutomata.cpp  main.cpp  terminalAutomata.cpp
